makefile/README fixes

--- a/README.in
+++ b/README.in
@@ -24,10 +24,15 @@ FEATURES
 
 TODO
 
-see TODO
+*see TODO
+
 
 REFERENCES
 
 *freedb: http://www.freedb.org
 *taglib: http://developer.kde.org/~wheeler/taglib.html
 *python: http://www.python.org
+
+
+MODULES
+
