add missing files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
-include Makefile MANIFEST.in namingmuse.spec Changelog README README.in
+include Makefile
+include namingmuse.spec
+include MANIFEST.in
+include Changelog TODO README README.in
+include tools/*.py
