--- a/README.in
+++ b/README.in
@@ -20,9 +20,9 @@ Send bug reports, questions and feature requests to
 namingmuse-devel@lists.berlios.de.
 
 REQUIREMENTS
-python-2.3
-taglib
-python-taglib
+python >= 2.5
+taglib >= 1.5
+python-tagpy >= 0.94.5
 
 FEATURES
 
