add ignore option for ignoring folders. don't ignore folders named nonalbum by default anymore. fix filepath bugs and extend filepath.

--- a/config
+++ b/config
@@ -27,3 +27,8 @@ tagencoding = iso-8859-15
 # The default is False.
 
 autoselect = False
+
+# A regular expression denoting directories to ignore.
+# Currently effective for discmatch and stats.
+
+ignore = nonalbum
